Therion 6.0.5 (in progress):

therion:
 * bugs fixed:
   - lox file generation segfault (solved by poly2tri library update)
   - segfault caused by mixing local and global coordinate system

loch:
 * added PLY walls export

--------------------------------------------------------------------------------

Therion 6.0.4 (2021-11-28):

therion:
 * MapBackground colour variable available in MetaPost
   (corresponding to 'color map-bg' set in the layout)
 * bugs fixed:
   - fixed bug with counter and depth instrument calibration
   - fixed error message for map containing only previews
   - depth is incorrectly taken from surface legs [#165]
   - cmyk/grayscale color export fix
   - fix shapefile generation issues under Windows (only when using
     the embedded shp library)

loch:
 * bugs fixed:
   - fixed grayscale surface image rendering

xtherion:
 * bugs fixed:
   - sketch import file browser case-sensitive to filename extensions [#390]
   - fix lintian warnings by using a different shebang line

infrastructure:
 * cmake: generate help and locale files for target loch
 * cmake improvements by Matěj Plch [#391]
 * updated Makefile and getvtkver.tcl for loch
 * fix thbook reproducible build (cmake only; SOURCE_DATE_EPOCH should be set)
 * support thbook compilation with luatex
 * use only current OS versions for make-based builds on GHA
 * fix/workaround for wine32 installation on Ubuntu 20.04 on GHA
 * updated libfmt [#388]
 * updated proj testing script

--------------------------------------------------------------------------------

Therion 6.0.3 (2021-10-03):

therion:
 * add support for splay shots in .3d import
 * survex code updated to 1.2.45
 * a new patch to get reproducible .3d files applied
 * bugs fixed:
   - fixed typos in an error message
   - sample files modified not to start with #! characters which confused lintian
   - color map-fg depth: fix the colouring issues and the related metapost error

loch: